Fixing some errors, correcting styles on mobile.

--- a/css/LESS/_config.less
+++ b/css/LESS/_config.less
@@ -94,3 +94,10 @@
 	}
 
 }
+
+@media (max-width: 768px) {
+	#config #avail li.aspect {
+		width: 33.3333%;
+	}
+}
+
